# QT-tetris

./: CMakeLists.txt  GameArea.cpp  GameArea.h  Item.cpp  Item.h  LICENSE  NextArea.cpp  NextArea.h  README.md  Tetris.pro  UserGameHistory.txt  app.rc  backGround.txt  background.cpp  background.h  background.ui  choosegame.cpp  choosegame.h  choosegame.ui  default.txt  gamearea2.cpp  gamearea2.h  history.cpp  history.h  history.ui  key.txt  keyboard.cpp  keyboard.h  keyboard.ui  lastGame.qrc  lastGame.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow2.cpp  mainwindow2.h  mainwindow2.ui  ranking.cpp  ranking.h  (+18 more)
userGameHistory/: 2.txt  Samir1.txt  ss1_Copy.txt  susu1.txt
